syntax = "proto3";

package clientpb;

// [ generic ] ----------------------------------------
message File {
  string Name = 1;
  bytes Data = 2;
}

message Process {
  int32 pid = 1;
  int32 ppid = 2;
  string executable = 3;
  string owner = 4;
}

// [ core ] ----------------------------------------
message Sliver {
	uint32 ID = 1;
	string Name = 2;
	string Hostname = 3;
	string Username = 4;
	string UID = 5;
	string GID = 6;
	string OS = 7;
	string Arch = 8;
	string Transport = 9;
	string RemoteAddress = 10;
	int32 PID = 11;
  string Filename = 12;
}

message SliverConfig {
  string GOOS = 1;
  string GOARCH = 2;
  string Name = 3;
  string CACert = 4;
  string Cert = 5;
  string Key = 6;
  bool Debug = 7;
  int32 ReconnectInterval = 8;

  // c2
  string MTLSServer = 9;
  int32 MTLSLPort = 10;
  string HTTPServer = 11;
  int32 HTTPLPort = 12;
  bool NoVerify = 13;
  string DNSParent = 14;

  bool LimitDomainJoined = 20;
  string LimitDatetime = 21;
  string LimitHostname = 22;
  string LimitUsername = 23;
}

message Profile {
  string Name = 1;
  SliverConfig Config = 2;
}

message Profiles {
  repeated Profile List = 1;
}

message Job {
  int32 ID = 1;
  string Name = 2;
  string Description = 3;
  string Protocol = 4;
  int32 Port = 5;
}

message JobStop {
  int32 ID = 1;
}

message Jobs {
  repeated Job Active = 1;
}

// [ listeners ] ----------------------------------------
message MTLSReq {
  string Server = 1;
  int32 LPort = 2;
}

message MTLS {
  int32 JobID = 1;
}

message DNSReq {
  string Domain = 1;
}

message DNS {
  int32 JobID = 1;
}

message HTTPReq {
  string Domain = 1;
  string Iface = 2;
  int32 LPort = 3;
  bool Secure = 4; // Enable HTTPS
}

message HTTP {
  int32 JobID = 1;
}

// [ commands ] ----------------------------------------
message Sessions {
  repeated Sliver Slivers = 1;
}

message GenerateReq {
  SliverConfig Config = 1;
}

message Generate {
  File File = 1;
}

message MSFReq {
  string Payload = 1;
  string LHost = 2;
  int32 LPort = 3;
  string Encoder = 4;
  int32 Iterations = 5;

  uint32 SliverID = 9;
}

message MSFInjectReq {
  string Payload = 1;
  string LHost = 2;
  int32 LPort = 3;
  string Encoder = 4;
  int32 Iterations = 5;

  int32 PID = 8;
  uint32 SliverID = 9;
}

message TaskReq {
  bytes Data = 1;
  uint32 SliverID = 9;
}

// [ Tunnels ] ----------------------------------------
message TunnelCreateReq {
  uint32 SliverID = 1;
}

message TunnelCreate {
  uint32 SliverID = 1;

  uint64 TunnelID = 9;
}

message TunnelCloseReq {
  uint64 TunnelID = 9;
}


// [ events ] ----------------------------------------
message Client {
  int32 ID = 1;
  string Operator = 2;
}

message Event {
  string EventType = 1;
  Sliver Sliver = 2;
  Job Job = 3;
  Client Client = 4;
  string Err = 5;
}
